<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#4BA286"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.qshake.OwnQuestionsActivity">
    <TextView
        android:id="@+id/textUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="5"
        android:textColor="#D10D0D"
        android:background="#4BA286"
        android:paddingTop="5dp"
        android:paddingBottom="20dp"
        android:popupBackground="#BDB7B7"
        android:text="@string/input"
        android:typeface="monospace"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <EditText android:id="@+id/textT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="text"
        android:lines="3"
        android:layout_below="@+id/textUser"
        android:textColor="#D10D0D"
        android:background="#3D995C"
        android:minLines="2"
        android:typeface="monospace"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <TextView
        android:id="@+id/textType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="5"
        android:typeface="monospace"
        android:textColor="#D10D0D"
        android:background="#4BA286"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/textT"
        android:popupBackground="#BDB7B7"
        android:text="@string/filter1"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Spinner
        android:id="@+id/spinnertype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="5"
        android:background="#3D995C"
        android:textColor="#D10D0D"
        android:typeface="monospace"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_below="@+id/textType"
        android:popupBackground="#BDB7B7"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <Button
        android:id="@+id/createBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:typeface="monospace"
        android:layout_below="@+id/spinnertype"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:onClick="onClick"
        android:textColor="#D10D0D"
        android:text="@string/create_game" />
</RelativeLayout>
